workshop/level-4-gateway/deploy/routes.yaml
# --- Route for Backend API ---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: jedy-api-route
  namespace: starwars
spec:
  parentRefs:
  - name: infra-gateway
    namespace: gateways
  rules:
  - matches:
    - path:
        type: PathPrefix
        value: /api
    filters:
    - type: URLRewrite
      urlRewrite:
        path:
          type: ReplacePrefixMatch
          replacePrefixMatch: /
    backendRefs:
    - name: back-service
      port: 4000
---
# --- Route for Frontend ---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: jedy-front-route
  namespace: starwars
spec:
  parentRefs:
  - name: infra-gateway
    namespace: gateways
  rules:
  - matches:
    - path:
        type: PathPrefix
        value: /
    backendRefs:
    - name: front-service
      port: 80
